# xva_engine

./: .gitignore  README.md  backlog_out.txt  board_out.txt  close_dupes.txt  close_dupes_output.txt  coverage_report.txt  create_board.txt  pyproject.toml
.github/workflows/: ci.yml  pr_review.yml
docs/math/: xva_mathematics.md
docs/plan/: future_implementation_plan.md  implmentation_plan.md  xva_engine_plan.md  xva_markdown_issues_review.md
inputs/config/: model_config.json
inputs/market/: credit_curves.json  discount_curve.json
inputs/netting/: netting_sets.csv
inputs/trades/: portfolio.csv
scripts/: write_ui.py  write_ui2.py
src/xva_engine/: engine.py
src/xva_engine/explain/: bundle.py
src/xva_engine/exposure/: collateral.py  exposure.py
src/xva_engine/io/: loaders.py  schemas.py
src/xva_engine/market/: credit.py  curve.py
src/xva_engine/models/: hw1f.py
src/xva_engine/products/: irs.py  schedule.py  zcb.py
src/xva_engine/sim/: batching.py  timegrid.py
src/xva_engine/ui/: streamlit_app.py
src/xva_engine/xva/: cva.py  dva.py  fva.py  kva.py  mva.py
tests/: conftest.py  test_engine.py
tests/explain/: test_bundle.py
tests/exposure/: test_collateral.py  test_exposure.py
tests/io/: test_loaders.py  test_schemas.py
tests/market/: test_credit.py  test_curve.py
tests/models/: test_hw1f.py
tests/products/: test_irs.py  test_schedule.py  test_zcb.py
tests/sim/: test_batching.py  test_timegrid.py
tests/xva/: test_cva.py  test_dva.py  test_fva.py  test_kva.py  test_mva.py
