[project]
name = "xva_engine"
version = "0.1.0"
description = "XVA Engine"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "numba>=0.58.0",
    "polars>=0.20.0",
    "pydantic>=2.5.0",
    "streamlit>=1.30.0",
    "plotly>=6.5.2",
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=7.0.0", "pytest-cov>=5.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/xva_engine",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=100",
    "--cov-branch",
    "-v",
]

[tool.coverage.run]
branch = true
source = ["src/xva_engine"]
omit = ["src/xva_engine/ui/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
